--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -66,13 +66,8 @@
     height: 35px;
 }
 
-/* Для экранов шире 1600px */
 @media (min-width: 1600px) {
     .navbar {
-        padding: 0 24px; /* Минимальный отступ по бокам */
-    }
-
-    .navbar-container {
-        border: 2px solid white; /* Опционально: добавить границу */
+        padding: 0 24px;
     }
 }
