--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -20,14 +20,15 @@ html, body, #root {
 .image-container {
     width: 100%;
     height: 100%;
-    overflow: hidden;
     position: relative;
+    overflow: hidden;
 }
 
 .background-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    filter: brightness(0.7); /* Затемнение изображения */
 }
 
 .overlay {
@@ -36,10 +37,69 @@ html, body, #root {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    text-align: center;
+}
+
+.navbar-container {
+    width: 100%;
+    text-align: center;
 }
 
 
+.central-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 627px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -60%);
+    box-sizing: border-box;
+}
+
+
+.quote {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 48px;
+    margin-bottom: 10px;
+    max-width: 100%;
+    text-align: left;
+    height: 144px;
+}
+
+.author {
+    position: absolute;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    color: yellow;
+    margin-bottom: 30px;
+    text-align: left;
+    bottom: 47px;
+    right: 0;
+}
+
+.search-container {
+    width: 652px;
+}
+
+.search-container input {
+    width: 100%;
+    height: 55px;
+    border-radius: 25px;
+    border: none;
+    padding: 0 15px;
+    font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+}
 
 
 
