Book pic and main depiction are done

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -75,7 +75,7 @@ html, body, #root {
     height: 144px;
 }
 
-.author {
+.central-content .author {
     position: absolute;
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
