Simple Render Content for each category is done

--- a/src/Pages/Literature Page/Literature-Page.css
+++ b/src/Pages/Literature Page/Literature-Page.css
@@ -41,4 +41,16 @@
     font-size: 29px;
     font-weight: bold;
     text-align: left;
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+}
+
+
+.category-name:focus,
+.category-name:hover,
+.category-name.active{
+    outline: none;
+    color: rgba(243, 232, 211, 0.87);
 }
