--- a/src/Components/Home Item/Home-Item.css
+++ b/src/Components/Home Item/Home-Item.css
@@ -9,7 +9,8 @@
     width: 100%;
     height: calc(100% / 1.22);
     border-radius: 4px;
-    background-color: rgba(217, 217, 217, 0.88);
+    /*background-color: rgba(217, 217, 217, 0.6);*/
+    background-color: #f1f1f1;
     display: flex;
     align-items: center;
     justify-content: center;
