--- a/src/Pages/Book Page/Book-Page.css
+++ b/src/Pages/Book Page/Book-Page.css
@@ -57,14 +57,14 @@
     border-bottom: 1px solid #d2d2d2;
 }
 
-.book-page-content-container .space {
+.book-page-content-container .space { /*расстяжение на максимум*/
     width: 100%;
     display: flex;
     /*border: 1px solid green;*/
     justify-content: space-between;
 }
 
-.sub-space {
+.sub-space { /*расстяжение*/
     display: flex;
     /*border: 1px solid #550080;*/
     gap: 10px;
