--- a/src/Pages/Shopping cart/Shopping-Cart.css
+++ b/src/Pages/Shopping cart/Shopping-Cart.css
@@ -26,8 +26,52 @@
 
 .check {
     width: 360px;
-    height: 200px;
-    background-color: #DFDFDF;
+    height: 274px;
     border-radius: 6px;
     position: sticky;
 }
+
+.check-main {
+    background-color: rgba(223, 223, 223, 0.75);
+    width: 100%;
+    height: auto;
+    /*height: 200px;*/
+    border-radius: 6px;
+    padding: 14px;
+}
+
+.check-button {
+    border-radius: 6px;
+    margin-top: 20px;
+    width: 100%;
+    height: 52px;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.check-main .space {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.check .text {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    color: black;
+}
+
+.check-main .line {
+    margin-top: 18px;
+    width: 100%;
+    border-bottom: 1px solid #c7c7c7;
+}
+
+.pay-icon {
+    width: 32px;
+    height: 32px;
+}
+
