--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -20,10 +20,10 @@
     text-decoration: none;
 }
 
-.left {
-    display: flex;
-    align-items: center;
-}
+/*.left {*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*}*/
 
 .center {
     position: absolute;
@@ -33,10 +33,10 @@
     align-items: center;
 }
 
-.right {
-    display: flex;
-    align-items: center;
-}
+/*.right {*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*}*/
 
 .navbar-text {
     font-family: 'Montserrat', sans-serif;
